--- a/src/components/styles/global-style.css
+++ b/src/components/styles/global-style.css
@@ -4,6 +4,14 @@
     padding: 20px;
 }
 
+.regis-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 600px;
+    justify-content: center;
+}
+
 .profile-box {
     display: flex;
     flex-direction: column;
