DEV-011: Add Income Button Functionality
Button 'Add Income' now is working;
Cleaning unused file and folder;

--- a/src/components/styles/global-style.css
+++ b/src/components/styles/global-style.css
@@ -28,6 +28,12 @@
     bottom: 7%;
 }
 
+.box-income-modal {
+    display: flex;
+    gap: 7px;
+    margin-top: 20px;
+}
+
 .profile-details {
     display: block;
     margin: 10px 0;
@@ -35,4 +41,8 @@
 
 .btn-group {
     width: 100px;
+}
+
+.btn-group-income-modal {
+    width: 100%;
 }
