DEV-018: Scheduler Title Acted as Link
User can click each scheduler title and it will displays full information (including description);

--- a/src/components/styles/global-style.css
+++ b/src/components/styles/global-style.css
@@ -41,6 +41,13 @@
     justify-content: center;
 }
 
+.box-detail-scheduler {
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
+    justify-content: flex-start;
+}
+
 .profile-details {
     display: block;
     margin: 10px 0;
