--- a/src/components/styles/global-style.css
+++ b/src/components/styles/global-style.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     align-items: center;
     height: 600px;
+    margin-top: 40px;
     justify-content: center;
 }
 
@@ -49,7 +50,7 @@
 }
 
 .profile-details {
-    display: block;
+    display: flex;
     margin: 10px 0;
 }
 
