--- a/src/components/styles/global-style.css
+++ b/src/components/styles/global-style.css
@@ -65,3 +65,33 @@
 .btn-group-delete-scheduler {
     width: 25%;
 }
+
+.card {
+    background-color: white;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    width: 400px;
+    height: 150px;
+    border-radius: 5px;
+    position: relative;
+    margin: 20px 0;
+}
+
+.card-action {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    padding: 25px;
+}
+
+.col  {
+    padding: 20px;
+    background-color: #F4F5F7;
+    border-radius: 10px;
+}
