--- a/src/components/styles/global-style.css
+++ b/src/components/styles/global-style.css
@@ -1,3 +1,13 @@
+/* This CSS will applies when max-width is 480px */
+@media screen and (max-width: 480px) {
+    .navbar {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      align-items: center;
+    }
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
